increase memory a bit for at least one run